# logistic-regression-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: artificial_data.ipynb
src/: logistic_regression.py  metrics.py
