[project]

name = "logistic-regression-from-scratch"
version = "0.1.0"
description = "Add your description here" 
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]